exercicio final modulo 6

--- a/CSS/6.3 CSS Box Model/index.html
+++ b/CSS/6.3 CSS Box Model/index.html
@@ -15,11 +15,23 @@
 
    .box-Amarl {
     background-color: yellow;
-    border: 20px 10px 20px 10px solid;
+    border: 10px solid;
+    border-top: 20px solid;
+    border-bottom: 20px solid;
     width: 185px;
     height: 200px;
+    right: 600px;
+    margin-left: 259px;
    }
 
+   .box-Rosa {
+    background-color: rgb(192, 71, 71);
+    border: 10px solid;
+    width: 185px;
+    height: 185px;
+    margin-left: 55px;
+
+   }
   </style>
 </head>
 
@@ -31,6 +43,9 @@
   </div>
   <div class="box-Amarl">
     
+  </div>
+  <div class="box-Rosa">
+
   </div>
 
 
