--- a/CSS/7.0/index.html
+++ b/CSS/7.0/index.html
@@ -10,15 +10,15 @@
 <body>
   <div id="outer-box" class="box">
     <div class="box">
-      <p>Yellow Text</p>
+      <p id="ielo">Yellow Text</p>
       <div class="box inner-box">
-        <p class="white-text">White Text</p>
+        <p id="uaite" class="white-text">White Text</p>
       </div>
     </div>
     <div class="box">
-      <p>Yellow Text</p>
+      <p id="ielo">Yellow Text</p>
       <div class="box inner-box">
-        <p class="white-text">White Text</p>
+        <p id="uaite" class="white-text">White Text</p>
       </div>
     </div>
   </div>
