--- a/CSS/7.3 Laos flag/index.html
+++ b/CSS/7.3 Laos flag/index.html
@@ -18,10 +18,11 @@ https://appbrewery.github.io/flag-of-laos/
 
 <body>
     <div class="flag">
-        <h1>the flag</h1>
+        <h1 class="sup">The Flag</h1>
         <div class="blue">
             <div class="circle">
-                <h1>of laos</h1>
+                <h1 class="of">of</h1>
+                <h1 class="inf">Laos</h1>
             </div>
         </div>
     </div>
