--- a/CSS/8.3 Media Query/index.html
+++ b/CSS/8.3 Media Query/index.html
@@ -32,7 +32,11 @@ TODO: Change the background color for each device
       }
     }
 
-    @media (min)
+    @media (min-width: 1601px) {
+      body {
+        background-color: seagreen;
+      }
+    }
   </style>
 </head>
 
