--- a/CSS/8.4 Web Design Agency Project/index.html
+++ b/CSS/8.4 Web Design Agency Project/index.html
@@ -32,7 +32,7 @@
         <img class="tile-image" src="./assets/images/construction.jpg" alt="metal structure">
         <div>
           <h2 class="card-title">Construction</h2>
-          <p>Built by our team of professional developers, we ensure the most rigorous and modern websites. Built from
+          <p class="card-text">Built by our team of professional developers, we ensure the most rigorous and modern websites. Built from
             scratch using HTML and CSS. Only the best for you.</p>
         </div>
       </div>
