--- a/CSS/10.2 Grid Placement/10.2 Grid Placement/exercise2.html
+++ b/CSS/10.2 Grid Placement/10.2 Grid Placement/exercise2.html
@@ -37,10 +37,15 @@
 
     .astronaut {
       background-color: #03989E;
-      order: 1;
+      order: 2;
+      grid-column: span 2;
 
       /* TODO: Make the astronaut box look like the goal2 image. */
 
+    }
+
+    .book {
+      column-span: 4;
     }
   </style>
 </head>
