--- a/CSS/10.2 Grid Placement/10.2 Grid Placement/exercise3.html
+++ b/CSS/10.2 Grid Placement/10.2 Grid Placement/exercise3.html
@@ -43,8 +43,8 @@
 
     .book {
       background-color: #E58331;
-      /* TODO: Make the book div look like 
-      the goal3 image using grid-row. */
+      grid-row-start: 4;
+      grid-row-end: -3;
     }
   </style>
 </head>
