--- a/CSS/10.3 Mondrian Project/index.html
+++ b/CSS/10.3 Mondrian Project/index.html
@@ -5,25 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mondrian Project</title>
-  <style>
-    /* 
-    Write your CSS here 
-    Gap Colour: #000
-    White: #F0F1EC
-    Red: #E72F24
-    Black: #232629
-    Blue: #004592
-    Yellow: #F9D01E
-
-    For dimensions, see dimensions.png image.
-    HINT: Remember you can't change the properties of grid lines.
-    But grid lines are transparent!
-    */
-  </style>
+  <link href="style.css" rel="stylesheet"/>
 </head>
 
-<body>
-  <!-- Write your HTML here -->
+<body class="container">
+  <div class="red"></div>
+  <div class="black"></div>
+  <div class="green"></div>
+  <div class="blue"></div>
 </body>
 
 </html>
