--- a/CSS/10.3 Mondrian Project/index.html
+++ b/CSS/10.3 Mondrian Project/index.html
@@ -8,11 +8,19 @@
   <link href="style.css" rel="stylesheet"/>
 </head>
 
-<body class="container">
-  <div class="red"></div>
-  <div class="black"></div>
-  <div class="green"></div>
-  <div class="blue"></div>
+<body>
+  <div class="container">
+    <div class="one">1</div>
+    <div class="two">2</div>
+    <div class="three">3</div>
+    <div class="for">4</div>
+    <div class="five">5</div>
+    <div class="six">6</div>
+    <div class="seven">7</div>
+    <div class="eight">8</div>
+    <div class="nine">9</div>
+    <div class="ten">10</div>
+  </div>
 </body>
 
 </html>
