--- a/CSS/Recap/10.0+Display+Grid/10.0 Display Grid/example.html
+++ b/CSS/Recap/10.0+Display+Grid/10.0 Display Grid/example.html
@@ -6,7 +6,7 @@
   <style>
     .container {
       display: grid;
-      grid-template-columns: 1fr 2fr;
+      grid-template-columns: 1fr 2fr 1fr;
       grid-template-rows: 1fr 1fr;
       gap: 10px
     }
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="one">
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut error ea neque! Minima fuga deserunt delectus
-        corrupti molestiae, eos esse quos vel reiciendis neque quibusdam!</p>
+        corrupti molestiae, eoss esse quos vel reiciendis neque quibusdam!</p>
     </div>
     <div class="two">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis eius, consequuntur facere iure error fugiat
