--- a/CSS/Recap/10.3+Mondrian+Project/10.3 Mondrian Project/index.html
+++ b/CSS/Recap/10.3+Mondrian+Project/10.3 Mondrian Project/index.html
@@ -6,6 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mondrian Project</title>
   <style>
+    .fundo {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      background-color: black;
+      width: 748px;
+      height: 748px;
+      gap: 9px;
+    }
+
+    .vermelho {
+      background-color: #E72F24;
+      width: 320px;
+      height: 414px;
+      
+    }
+
+    .cinza {
+      background-color: #ccd3da;
+      grid-column: span 3;
+      height: 414px;
+      width: 401px;
+    }
+
+
     /* 
     Write your CSS here 
     Gap Colour: #000
@@ -23,7 +47,23 @@
 </head>
 
 <body>
-  <!-- Write your HTML here -->
+  <div class="fundo">
+    <div class="vermelho">
+
+    </div>
+    <div class="cinza">
+
+    </div>
+    <div class="branco-esquerda">
+
+    </div>
+    <div class="branco-direita">
+
+    </div>
+    <div class="azul">
+
+    </div>
+  </div>
 </body>
 
 </html>
