--- a/CSS/Recap/10.2 Grid Placement/exercise2.html
+++ b/CSS/Recap/10.2 Grid Placement/exercise2.html
@@ -26,7 +26,7 @@
       background-color: blueviolet;
       display: flex;
       align-items: center;
-      justify-content: center;  
+      justify-content: center;
 
     }
 
@@ -38,12 +38,9 @@
     .astronaut {
       background-color: #03989E;
       order: 1;
-      grid-area: 2 / 1 / 3 / 3;
-    }
 
-    .book {
-      background-color: #E58331;
-      grid-row: span 2;
+      /* TODO: Make the astronaut box look like the goal2 image. */
+
     }
   </style>
 </head>
