--- a/CSS/Recap/10.2 Grid Placement/exercise3.html
+++ b/CSS/Recap/10.2 Grid Placement/exercise3.html
@@ -38,9 +38,13 @@
     .astronaut {
       background-color: #03989E;
       order: 1;
-      grid-column: span 2;
-      
+      grid-area: 2 / 1 / 3 / 3;
+    }
 
+    .book {
+      background-color: #E58331;
+      /* TODO: Make the book div look like 
+      the goal3 image using grid-row. */
     }
   </style>
 </head>
