--- a/Projetos pessoais/Capstone 2/index.html
+++ b/Projetos pessoais/Capstone 2/index.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -27,6 +26,15 @@
         </ul>
         </header>
     </div>
-
+    <div class="container-profile-img">
+        <div class="row">
+            <div class="col-12">
+                <img src="img/profilepic.webp" alt="André Carvalho" class="profile-img">
+                <p class="text-profile-img">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum dolores aspernatur exercitationem. Perferendis vitae velit nostrum maxime et. Debitis voluptates aliquam placeat aperiam dolor et eos ipsa dolores cum nobis?
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
