--- a/Projetos pessoais/Capstone 2/index.html
+++ b/Projetos pessoais/Capstone 2/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Site</title>
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="container heading">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" fill="white" class="bi bi-code-slash" viewBox="0 0 16 16">
@@ -19,21 +25,30 @@
         </a>
      
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="btn btn-outline-light" aria-current="page">Início</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-white">Sobre mim</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-white">Redes sociais</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-white">Contatos</a></li>
+            <li class="nav-item"><a href="#" class="btn btn-outline-light" aria-current="page">Home</a></li>
         </ul>
         </header>
     </div>
     <div class="container-profile-img">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 content">
                 <img src="img/profilepic.webp" alt="André Carvalho" class="profile-img">
-                <p class="text-profile-img">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum dolores aspernatur exercitationem. Perferendis vitae velit nostrum maxime et. Debitis voluptates aliquam placeat aperiam dolor et eos ipsa dolores cum nobis?
-                </p>
+                <p class="subtitle">I am</p>
+                <h2 class="text-profile-img">
+                    André Carvalho, full-stack developer with Javascrispt, PHP, Bootstrap and Java
+                </h2>
             </div>
+        </div>
+    </div>
+    <div class="container">
+        <h2>
+            My Projects
+        </h2>
+        <div class="col-6">
+teste
+        </div>
+        <div class="col-6">
+teste
         </div>
     </div>
 </body>
