--- a/Projetos pessoais/Capstone 2/index.html
+++ b/Projetos pessoais/Capstone 2/index.html
@@ -25,7 +25,9 @@
         </a>
      
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="btn btn-outline-light" aria-current="page">Home</a></li>
+            <li class="nav-item mx-2"><a href="#" class="btn btn-outline-light" aria-current="page">LinkedIn</a></li>
+
+            <li class="nav-item mx-2"><a href="#" class="btn btn-outline-light" aria-current="page">GitHub</a></li>
         </ul>
         </header>
     </div>
@@ -40,16 +42,29 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <h2>
-            My Projects
-        </h2>
-        <div class="col-6">
-teste
-        </div>
-        <div class="col-6">
-teste
+    <div class="container projects">
+        <div class="row">
+            <h2 class="project-title">
+                My Projects
+            </h2>
+            <div class="col-6">
+                <h3 class="button-project"><a href="https://www.youtube.com/" target="_blank">Project 1</a></h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                </p>
+            </div>
+            <div class="col-6">
+                <h3 class="button-project"><a href="https://www.youtube.com/" target="_blank">Project 2</a></h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                </p>
+            </div>
         </div>
     </div>
+    <div class="container">
+        <footer class="py-3 my-4">
+          <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+        </footer>
+      </div>
 </body>
 </html>
