--- a/JS/clicker/index.html
+++ b/JS/clicker/index.html
@@ -9,10 +9,11 @@
 <body>
     <h1 class="title">Click count</h1>
     <div class="container">
-        <h1 class="number">1</h1>
+        <h1 class="number">0</h1>
         <div class="buttons">
-            <button>Increment</button>
-            <button>Decrement</button>
+            <button id="inc">Increment</button>
+            <button id="dec">Decrement</button>
+            <button id="res">Reset</button>
         </div>
     </div>
     <script src="script.js"></script>
