--- a/JS/to do/index.html
+++ b/JS/to do/index.html
@@ -5,19 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
     <link href="styles.css" rel="stylesheet">
-    <!--
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-    -->
-
 </head>
 <body>
     <h1>To Do List</h1>
     <div class="container">
         <h2>Lista de tarefas</h2>
-        <button id="addTask">Adicionar tarefa</button>
-        <input id="inputTask" type="text" placeholder="Digite a tarefa">
-        <ul id="taskList"></ul>
+        <div id="content">
+            <button id="addTask">Adicionar</button>
+            <input id="inputTask" type="text" placeholder="Digite a tarefa">
+            <ul id="taskList"></ul>
+        </div>
     </div>
     
 
