--- a/JS/Market List/index.html
+++ b/JS/Market List/index.html
@@ -14,6 +14,7 @@
 
         <button id="addButton">Adicionar item</button>
         <input id="inputItem" type="text" placeholder="Digite o item">
+        <input id="inputNum" type="number" placeholder="quantidade">
         <ul id="itemList"></ul>
 
     </div>
