--- a/JS/Market List/index.html
+++ b/JS/Market List/index.html
@@ -9,17 +9,14 @@
 <body>
     <h1>Lista do Mercado</h1>
     
-    <div>
-        <h2>Todos os itens</h2>
-
-        <button id="addButton">Adicionar item</button>
+    <div class="addItems">
         <input id="inputItem" type="text" placeholder="Digite o item">
-        <input id="inputNum" type="number" placeholder="quantidade">
+        <input id="inputNum" type="number" placeholder="Quantidade">
+        <button id="addButton">Adicionar item</button>
         <ul id="itemList"></ul>
-
     </div>
 
-    <div>
+    <div class="need">
         <h2>Falta comprar</h2>
         <ul id="needToBuy"></ul>
     </div>
