--- a/JS/Faq/index.html
+++ b/JS/Faq/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Perguntas frequentes</h1>
     <div>
-        
-    </div>
+        <di class="faqItem">
+            <button class="faqBtn">O que é o lorem?</button>
+            <p class="faqContent">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quisquam molestiae quod similique explicabo inventore sit magni, obcaecati exercitationem temporibus atque esse illum assumenda nam! Aliquid molestiae ducimus doloribus optio?</p>
+        </div>
 
+        <div class="faqItem">
+            <button class="faqBtn">Como funciona o lorem?</button>
+            <p class="faqContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio at excepturi modi? Commodi fugiat nostrum provident incidunt ullam dignissimos numquam, vero maiores deserunt, aliquid dicta et eligendi omnis, distinctio dolor?</p>
+        </div>
+
+        <div class="faqItem">
+            <button class="faqBtn">O lorem é gratuito?</button>
+            <p class="faqContent">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi nisi et cumque quo atque molestiae quis obcaecati. Quos, harum voluptate sit quas molestias tenetur, earum veniam in, at sint aperiam.</p>
+        </div>
+    </div>
     <script src="script.js" ></script>
 </body>
 </html>
