--- a/JS/Pomodoro/index.html
+++ b/JS/Pomodoro/index.html
@@ -12,8 +12,8 @@
 
     <div>
         <button id="start">start</button>
-        <button>pause</button>
-        <button>reset</button>
+        <button id="pause">pause</button>
+        <button id="reset">reset</button>
     </div>
     <script src="script.js"></script>
 </body>
