--- a/JS/Pomodoro/index.html
+++ b/JS/Pomodoro/index.html
@@ -7,14 +7,17 @@
 </head>
 <body>
     <div>
-        <span id="minute">00</span>:<span id="second">00</span>
+        <div>
+            <span id="minute">25</span>:<span id="second">00</span>
+        </div>
+        <div>
+            <button id="start">start</button>
+            <button id="pause">pause</button>
+            <button id="focus">focus</button>
+            <button id="break">break</button>
+        </div>
     </div>
-
     <div>
-        <button id="start">start</button>
-        <button id="pause">pause</button>
-        <button id="reset">reset</button>
-    </div>
     <script src="script.js"></script>
 </body>
 </html>
