inicio das tasks do timer

--- a/JS/Pomodoro/index.html
+++ b/JS/Pomodoro/index.html
@@ -18,6 +18,14 @@
         </div>
     </div>
     <div>
-    <script src="script.js"></script>
+
+    <div>
+        <button id="inputBtn">add</button>
+        <input id="inputTask" type="text" placeholder="add task">
+        <ul id="taskList"></ul>
+    </div>
+
+    <script src="JavaScript/pomodoro.js"></script>
+    <script src="JavaScript/task.js"></script>
 </body>
 </html>
