--- a/JS/Pomodoro/index.html
+++ b/JS/Pomodoro/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Timer</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <div>
         <div>
             <span id="minute">25</span>:<span id="second">00</span>
         </div>
-        <div>
+        <div id="buttons">
             <button id="start">start</button>
             <button id="pause">pause</button>
             <button id="focus">focus</button>
