--- a/JS/Pomodoro/index.html
+++ b/JS/Pomodoro/index.html
@@ -7,20 +7,19 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div>
-        <div>
+    <div class="countDown">
+        <div class="chrono">
             <span id="minute">25</span>:<span id="second">00</span>
         </div>
         <div id="buttons">
-            <button id="start">start</button>
-            <button id="pause">pause</button>
-            <button id="focus">focus</button>
-            <button id="break">break</button>
+            <button id="start">Start</button>
+            <button id="pause">Pause</button>
+            <button id="focus">Focus</button>
+            <button id="break">Break</button>
         </div>
     </div>
-    <div>
 
-    <div>
+    <div class="toDo">
         <button id="inputBtn">add</button>
         <input id="inputTask" type="text" placeholder="add task">
         <ul id="taskList"></ul>
