--- a/JS/Pomodoro/index.html
+++ b/JS/Pomodoro/index.html
@@ -20,8 +20,10 @@
     </div>
 
     <div class="toDo">
-        <button id="inputBtn">add</button>
-        <input id="inputTask" type="text" placeholder="add task">
+        <div class="inputList">
+            <input id="inputTask" type="text" placeholder="Task">
+            <button id="inputBtn">Add</button>
+        </div>
         <ul id="taskList"></ul>
     </div>
 
