--- a/JS/LinkPage/index.html
+++ b/JS/LinkPage/index.html
@@ -22,19 +22,21 @@
 
     <div>
         <input id="select-print" type="text" placeholder="Digite o modelo da impressora">
-        <ul>
+        <ul id="printer-list">
             <li>Impressoras laser
                 <ul>Brother
-                    <li><a id="link-item" href="#">HL-1202W</a></li>
-                    <li><a id="link-item" href="#">DCP-L5652DN</a></li>
-                    <li><a id="link-item" href="#">DCP-L2540DW</a></li>
+                    <li><a class="link-item" href="#">HL-1202W</a></li>
+                    <li><a class="link-item" href="#">DCP-L5652DN</a></li>
+                    <li><a class="link-item" href="#">DCP-L2540DW</a></li>
                 </ul>
                 <ul>HP
-                    <li><a id="link-item" href="#">HP 400</a></li>
-                    <li><a id="link-item" href="#">1102w</a></li>
+                    <li><a class="link-item" href="#">HP 400</a></li>
+                    <li><a class="link-item" href="#">1102w</a></li>
                 </ul>
             </li>
         </ul>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
