--- a/JS/LinkPage/index.html
+++ b/JS/LinkPage/index.html
@@ -25,13 +25,13 @@
         <ul id="printer-list">
             <li>Impressoras laser
                 <ul>Brother
-                    <li><a class="link-item" href="#">HL-1202W</a></li>
-                    <li><a class="link-item" href="#">DCP-L5652DN</a></li>
-                    <li><a class="link-item" href="#">DCP-L2540DW</a></li>
+                    <li><a class="link-item" data-model="br1202" href="#">HL-1202W</a></li>
+                    <li><a class="link-item" data-model="br5652" href="#">DCP-L5652DN</a></li>
+                    <li><a class="link-item" data-model="br2540" href="#">DCP-L2540DW</a></li>
                 </ul>
                 <ul>HP
-                    <li><a class="link-item" href="#">HP 400</a></li>
-                    <li><a class="link-item" href="#">1102w</a></li>
+                    <li><a class="link-item" data-model="hp400" href="#">HP 400</a></li>
+                    <li><a class="link-item" data-model="hp1102" href="#">1102w</a></li>
                 </ul>
             </li>
         </ul>
