--- a/JS/Seção 18/aula 1/index.html
+++ b/JS/Seção 18/aula 1/index.html
@@ -12,8 +12,8 @@
 
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
-    <button class="w drum">w</button>
-    <button class="a drum">a</button>
+    <button data-w="w" class="w drum">w</button>
+    <button data-a="a"class="a drum">a</button>
     <button class="s drum">s</button>
     <button class="d drum">d</button>
     <button class="j drum">j</button>
