--- a/JS/Seção 18/aula 1/index.html
+++ b/JS/Seção 18/aula 1/index.html
@@ -12,13 +12,13 @@
 
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
-    <button data-w="w"class="w drum">w</button>
-    <button data-a="a"class="a drum">a</button>
-    <button data-s="s"class="s drum">s</button>
-    <button data-d="d"class="d drum">d</button>
-    <button data-j="j"class="j drum">j</button>
-    <button data-k="k"class="k drum">k</button>
-    <button data-l="l"class="l drum">l</button>
+    <button class="w drum">w</button>
+    <button class="a drum">a</button>
+    <button class="s drum">s</button>
+    <button class="d drum">d</button>
+    <button class="j drum">j</button>
+    <button class="k drum">k</button>
+    <button class="l drum">l</button>
   </div>
 
 
