--- a/JS/Seção 19/aula 1/index.html
+++ b/JS/Seção 19/aula 1/index.html
@@ -14,6 +14,7 @@
     <button>Click</button>
     <button>Click</button>
     <button>Click</button>
+    <input>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="index.js"></script>
